--- a/package.json
+++ b/package.json
@@ -14,5 +14,20 @@
   "type": "module",
   "workspaces": [
     "src/corazones_torcidos_frontend"
-  ]
+  ],
+  "dependencies": {
+    "@date-io/dayjs": "^3.0.0",
+    "@dfinity/agent": "^1.3.0",
+    "@dfinity/auth-client": "^1.3.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/pickers": "^3.3.11",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.20",
+    "react-router": "^6.23.1",
+    "react-router-dom": "^6.23.1",
+    "reactour": "^1.19.4"
+  }
 }
