--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@mui/icons-material": "^5.15.20",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.20",
+    "axios": "^1.7.2",
+    "qrcode.react": "^3.1.0",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
     "reactour": "^1.19.4"
